samples/_failures_safe/1761370401_d4d705_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f31798f2.c: In function ‘lexer_next’:
./samples/SAFE/__tmp_f31798f2.c:142:9: error: expected declaration or statement at end of input
  142 |         token.value[1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_f31798f2.c:142:9: error: expected declaration or statement at end of input
